# Sayo_CLI

./: .editorconfig  .gitignore  .gitmodules  98-saybot.rules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  Sayo_CLI_Mac  Sayo_control_CLI.cpp  Sayo_control_CLI.h  build_Mac.sh  build_linux.sh  build_linux_system_libs.sh  main.cpp  o2_protocol.cpp  o2_protocol.h  script.h  test.c
html/: firmware_0x0809_0x0002.json  index.html
html/css/: app.99413638.css  chunk-vendors.1b6f932d.css
html/emmm/: bootloader.json  button_firmware_update_O2.json  col_cmd_len_3.json  color.json  const_string.json  main.json  mouse_keys.json  ok_string.json
html/js/: app.js  chunk-vendors.js
html/lang/: lang.json  lang.json.bak
inc/: http.h  script.h  tools.h
src/: http.cpp  tools.cpp
