PROJECT(sayo_cli C CXX)
CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
enable_testing()

set(CMAKE_CXX_STANDARD 17)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
FIND_PACKAGE(HIDAPI REQUIRED)
FIND_PACKAGE(JsonCpp REQUIRED)

INCLUDE_DIRECTORIES(
        ${CMAKE_CURRENT_SOURCE_DIR}/inc
        ${JsonCpp_INCLUDE_DIR}
        ${HIDAPI_INCLUDE_DIR}
)

AUX_SOURCE_DIRECTORY(
        ${CMAKE_CURRENT_SOURCE_DIR}/src
        DIR_SRCS)
# AUX_SOURCE_DIRECTORY(
#     ${CMAKE_CURRENT_SOURCE_DIR}/inc
#     DIR_SRCS)

SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pthread ")

message(${CMAKE_CXX_FLAGS_RELEASE})
message(${CMAKE_EXE_LINKER_FLAGS})

ADD_EXECUTABLE(sayo_cli main.cpp o2_protocol.cpp ${DIR_SRCS})
target_link_libraries(sayo_cli ${JsonCpp_LIBRARY} ${HIDAPI_LIBRARY})